quick overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
     background: black;
     font-family: "Oswald", sans-serif;
     font-style: italic;
+    overflow: hidden;
 }
 
 .container {
